# GIDS_COREX_Eable

./: .gitignore  .last_sync_internal_commit  02-GIDS-使用指南.md  08-GIDS-源码分析-CUDA核心模块.md  10-GIDS-移植报告-端到端.md  GIDS-IX-依赖清单.md  GIDS-cuFile适配Corex方案总结.md  GIDS-与Iluvatar-GPU兼容性分析.md  GIDS-使用指南.md  GIDS-架构总览.md  GIDS-移植报告-端到端.md  GIDS-移植方案分析-cuFile-vs-GDS.md  SYNC_TO_GITHUB.sh  generate_bamptr_ppt.py  generate_gids_decision_ppt.py  generate_gids_ppt.py
GIDS/: TODO-graphbolt兼容方案.md  build_dgl_corex.sh  run.sh
GIDS/GIDS_Setup/GIDS/: GIDS_IX.py  tensor_write_ix.py  test.py
GIDS/evaluation/: homogenous_train_ix.py
GIDS/gids_module_ix/: CMakeLists.txt  build_ix.sh  ix_feature_store.cu  ix_stubs.cpp
GIDS/gids_module_ix/include/: ix_feature_store.h
HugeCTR/: CMakeLists.txt
HugeCTR/HugeCTR/embedding/data_distributor/: sparse_data_distribution_op_impl.cu
HugeCTR/HugeCTR/embedding/operators/: index_calculation.cu
HugeCTR/HugeCTR/embedding_storage/: dynamic_embedding.cu  dynamic_embedding_cpu.hpp  embedding_table.cpp
HugeCTR/HugeCTR/include/data_readers/multi_hot/detail/: system_latch.hpp
HugeCTR/HugeCTR/include/hashtable/cudf/: concurrent_unordered_map.cuh
HugeCTR/HugeCTR/src/: CMakeLists.txt  metrics.cu
HugeCTR/HugeCTR/src/embeddings/: distributed_slot_sparse_embedding_hash.cu  localized_slot_sparse_embedding_hash.cu
HugeCTR/sparse_operation_kit/: CMakeLists.txt
HugeCTR/sparse_operation_kit/kit_src/variable/impl/dynamic_embedding_table/cudf/: concurrent_unordered_map.cuh
HugeCTR/test/pybind_test/: din_matmul_fp32_1gpu.py
HugeCTR/test/utest/data_reader/: data_reader_benchmark.cu
HugeCTR/test/utest/embedding_collection/: test_embedding_table.cpp  test_embedding_table_optimizer.cpp
HugeCTR/test/utest/metrics/: auc_test.cpp
HugeCTR/tools/: CMakeLists.txt
HugeCTR/tools/dlrm_script/hash/: concurrent_unordered_map.cuh
HugeCTR/tools/dockerfiles/: Dockerfile.base
PPT/: 01-GIDS-架构分析与Corex适配-PPT.pptx  GIDS-Corex适配方案决策-汇报PPT.pptx  GIDS-bam_ptr原生适配Corex-完整分析PPT.pptx
corex_enable_bam/: README.md  sync_test.txt
corex_enable_bam/code/: libnvm_corex_map.c  test_io_memory  test_io_memory.cu
corex_enable_bam/docs/: 01-KMD源码分析报告.md  02-bam_ptr适配完整方案.md  03-bam_ptr-GPU缓存技术原理与接口详解.md  GIDS-HugeCTR-GPU-Cache与两级缓存优化.md  GIDS-IX-依赖清单.md  GIDS-ixdriver-cooperative-groups-meta-group接口补齐计划.md  GIDS-源码分析-Python接口.md  GIDS-移植方案分析-cuFile-vs-GDS.md  GIDS-问题记录与解决方案.md
corex_enable_bam/ppt/: bam_ptr-Corex适配-v2-KMD分析更新.pptx
dgl/: CMakeLists.txt
dgl/cmake/modules/: CUDA.cmake
dgl/include/dgl/: array_iterator.h
dgl/python/dgl/cuda/: __init__.py  gpu_cache.py
dgl/src/array/cuda/: fp16.cuh
docs/: 00-Corex兼容库总览.md  01-DGL-Corex兼容分析.md  02-HugeCTR-gpu_cache-Corex兼容分析.md  03-gpu_cache-PTX指令清单与Corex兼容状态.md  04-Corex-ivcorex内建指令与copylib用法分析.md
patches/: dgl_cuda_cmake_fix.patch
